# wasm_rust

./: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json
src/: lib.rs
