[package]
name = "wasm_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen-futures = "0.4.43"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["console","Request", "RequestInit", "RequestMode", "Response","Window","Headers","RequestRedirect"] }
serde_json = "1.0.128"
serde = { version = "1.0.128", features = ["derive"] }
